# mauro-sdk

./: README.md  design.md  pyproject.toml
src/mauro_sdk/: core.py  movie_sdk.py  resources.py
tests/: tests.py
