[build-system]
requires = ["hatchling", "requests"]
build-backend = "mauro-sdk.build"

[project]
name = "mauro_sdk"
version = "0.0.1"
authors = [
  { name="Mauro De Giorgi", email="mauro.degiorgi@gmail.com" },
]
description = "A APItoSDK generator for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mdgart/mauro-sdk"
"Bug Tracker" = "https://github.com/mdgart/mauro-sdk/issues"